# mlops-hands-on

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  step-1-experiment-tracking.md  step-2-orchestration.md  step-3-io-management.md  step-4-configuration.md  step-5-automation.md
data/: ames_housing.csv
notebooks/: ames_housing.ipynb
solutions/notebooks/: ames_housing.ipynb
solutions/src/ames_housing/: __init__.py
solutions/src/ames_housing/assets/: ames_housing_data.py  ames_housing_features.py  price_prediction_model.py  train_test.py
solutions/src/ames_housing/io_managers/: csv_io_manager.py
solutions/src/ames_housing/resources/: training_config.py
src/ames_housing/: __init__.py  constants.py
src/ames_housing/assets/: ames_housing_data.py  ames_housing_features.py  price_prediction_model.py  train_test.py
src/ames_housing/io_managers/: csv_io_manager.py
src/ames_housing/resources/: training_config.py
