[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ames-housing"
description = ""
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "notebook==7.3.1",
  "pandas==2.2.3",
  "scikit-learn==1.5.2",
  "mlflow==2.18.0",
  "dagster==1.9.4",
  "dagster-webserver==1.9.4"
]

[project.optional-dependencies]
dev = ["black", "ruff", "ruff-lsp"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "F841"]
